test/error/ast/SetElemOutOfRange.mod
MODULE SetElemOutOfRange;
VAR s: SET;
BEGIN
  s := {33};
END SetElemOutOfRange.
